# socmed-dl

./: .gitignore  Dockerfile  PKGBUILD  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: docker.yml  publish.yml
src/socmed_dl/: __init__.py  __main__.py  animation.py  app.py  cli.py  config.py  converter.py  downloader.py  main.py  utils.py
